--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,31 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #f5f5f1 !important;
+}
+.role{
+    color: cornflowerblue;
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+}
+.member{
+    color:#68625c;
+    font-size: 2rem;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
+}
+.container > .row {
+    gap: 30px;
+}
+.row > .col-4 {
+    width: calc((100%/ 3) - 30px/(2/3));
+}
+.mc-title{
+    text-transform: uppercase;
+    font-size: 2.5rem;
+}
+.mc-text{
+    font-style: italic;
+    font-size: 1rem;
+}
